# SerenUplift

./: .gitignore  .gitmodules  README.md  eda.ipynb  get_embeddings.py  main.py  main_recommender.py  main_uplift.py  preprocess.py  pyproject.toml  test.py  uplift_eda.ipynb
embeddings/: movie_emb_16.npy  movie_emb_8.npy  user_emb_16.npy  user_emb_8.npy
results/evaluation/: seren_uplift_3.0_4.5.json
results/recommendation/: BERT4Rec.json  GRU4Rec.json  LightGCN.json  NeuMF.json  SASRec.json  lightgcn.json  seren_uplift_2.0_4.0.json  seren_uplift_3.0_4.5.json
scripts/: main_atomic.py  main_compare.py  main_evaluate.py  main_recbole.py  main_recommendation.py  main_uplift.py
src/: __init__.py  compare.py  evaluate.py  preprocess.py  recbole.py  recommender.py  t_learner.py  utils.py
src/prompts/: zero_shot.yaml
src/rec_models/: abstract_recommender.py  lightgcn.py  seren_uplift.py
src/recbole_configs/: BERT4Rec.yaml  GRU4Rec.yaml  LightGCN.yaml  NeuMF.yaml  SASRec.yaml  overall.yaml
